right now I'm still working on the fix for the 3-5px adjustment on stick. Currently, it works when the page is loaded - however, resizing the page breaks the navigation placement in a way that's too broken

--- a/css/waypoint-style.css
+++ b/css/waypoint-style.css
@@ -87,7 +87,6 @@ ol.list-wrapper {
 #waypoint826-primary-container.stick {
 	position: fixed;
 	/* right: calc(100% - 10px); /* Adjusting the left position by 10px */
-	width: 250px;
 	top: 0!important;
 }
 
